# IGNITE

./: .gitignore  InstallTools.py  README.md
Blender/: ImportSTLs.py
Docs/: .readthedocs.yaml  requirements.txt
Docs/NIF/: NIF_Guide_HeadpostImplant.rst  NIF_Guide_MRIsurgery.rst  NIF_Guide_SkullModel.rst
Docs/source/: Blender.rst  FreeCAD.rst  ImageProcessing.rst  ImplantCustomization.rst  ImplantDesign.rst  Installation.rst  MBA_Preparation.rst  MicrowireArrays.rst  conf.py  index.rst
Docs/source/_images/Figures/: .smbdeleteAAA4fa51985b  Multidrive_parameters.ai
Docs/source/_images/Logos/: Ignite_Logo.ai
Docs/source/_templates/: layout.html
FreeCAD/: CopyObjectPosition.FCMacro  CreateElectrodes.py  DualDrive_DefaultParams.csv  GenerateDualChamber.py.FCMacro  GenerateDualChamber_CapGrid.py.FCMacro  Generate_ConnectorBlock.py  Generate_DriveTower.FCMacro  Generate_ImagingGrid.FCMacro  Stereotax_ArmAttachment.20241025-155301.FCBak  Stereotax_ArmAttachment.FCStd
FreeCAD/Parts/Screws/: 96295A120_Narrow Cheese Head Slotted Screws.STEP
MONAI/: StereotaxDetection.py
Slicer/: AddTargets.py  AlignStereotaxic.py  FillHolesInSegments.py  ImportAtlas.py  ImportSTL.py  LoadDICOM.py  NIF_GetPaths.py  SegmentVolume.py  SlicerStarup.py  desphinx.py  endocranium.py
Slicer/IGNITE/: CMakeLists.txt
Slicer/IGNITE/AlignStereotax/: AlignStereotax.py  CMakeLists.txt
Slicer/IGNITE/AlignStereotax/Resources/UI/: AlignStereotax.ui
Slicer/IGNITE/NIF_Import/: CMakeLists.txt  NIF_Import.py
Slicer/IGNITE/NIF_Import/Resources/UI/: NIF_Import.ui
(+54 files in other folders)
